fix: override z-index of StickyProductBar
Overriding z-index of StickyProductBar because it had the same value as
ContentBlock and they overlaid each other
Adding margin bottom to the footer to prevent overlapping with the
StickyProductBar

--- a/app/flagship/product-detail-page/page.module.scss
+++ b/app/flagship/product-detail-page/page.module.scss
@@ -397,3 +397,13 @@ div:has(> .overriddenGap) {
         }
     }
 }
+
+.overriddenZIndex > div {
+    z-index: 11;
+}
+
+.additionalFooterMargin {
+    @media (max-width: 935px) {
+        margin-bottom: 72px; //height of StickyProductBar
+    }
+}
